Skills tags now correctly align in the centre of their boxes

--- a/content/stylesheets/stylesheet.css.scss
+++ b/content/stylesheets/stylesheet.css.scss
@@ -126,7 +126,7 @@ body {
         margin-top: 15px;
         li.skill {
           display: inline-block;
-          padding: 3px 8px;
+          padding: 7px 8px 3px;
           margin-bottom: 4px;
           color: white;
 
